<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_camera_aravis</name>
  <version>0.1.0</version>
  <description>ros2_camera_aravis: A complete and comfortable GenICam (USB3Vision and GigEVision) based camera driver for ROS2 (ethernet and usb).</description>
  <maintainer email="Manu.Lange@plantandfood.co.nz">Manu Lange, The New Zealand Institute for Plant and Food Research Limited</maintainer>

  <author email="Manu.Lange@plantandfood.co.nz">Manu Lange, The New Zealand Institute for Plant and Food Research Limited</author>
  <author email="dominik.kleiser@iosb.fraunhofer.de">Dominik Kleiser, Fraunhofer IOSB</author>
  <author email="dominik.klein@fkie.fraunhofer.de">Dominik A. Klein, Fraunhofer FKIE</author>
  <author email="stevesafarik@gmail.com">Steve Safarik, Straw Lab</author>
  <author email="andrew.straw@imp.ac.at">Andrew Straw, Straw Lab</author>
  <author email="fvanbreugel@unr.edu">Floris van Breugel, van Breugel Lab</author>

  <url type="website">https://github.com/nznobody/camera_aravis</url>
  <url type="website">https://github.com/AravisProject/aravis</url>

  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcutils</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>tf2</depend>

  <build_depend>libglib-dev</build_depend>
  <!-- TODO: How to add aravis 0.8: https://github.com/ros/rosdistro/blob/master/rosdep/base.yaml -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
